# akm

./: .gitignore  .gitmodules  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: run_pytest.yaml
akm/data/: feature_of_interest_classes.json
akm/data/feature_of_interest/: feature_of_interest.json
akm/data/metric/: metrics.json
akm/data/property/: properties.json
akm/data/reference/: data_types.json  entity_types.json  units.json
akm/documentation/: README.md  config.toml
akm/documentation/content/: _index.md
akm/documentation/content/ecosystem/: _index.md  software.md  tools.md
akm/documentation/content/extensions/: _index.md
akm/documentation/content/governance/: _index.md
akm/documentation/content/license/: _index.md
akm/documentation/content/overlays/: _index.md
akm/schema/: README.md  automotive_knowledge_model.json
akm_tools/: README.md  akm_parser.py  akm_validator.py
akm_tools/utils/: __init__.py  genutils.py
akm_tools/validation/: __init__.py  custom_exceptions.py  data_context_validators.py  data_instance_validators.py  global_debug_config.py  validator.py
extensions/data/: data_types.json
extensions/schema/: data_property.json  data_type.json  feature_of_interest.json  feature_of_interest_class.json  metric.json  object_property.json  unit.json
tests/: conftest.py  test_AllDataContextValidators.py  test_CoreJsonSchemaValidator.py  test_CrossReferenceValidator.py  test_ExtendedInstanceContentValidator.py  test_custom_exceptions.py  test_utils.py
(+16 files in other folders)
